<?xml version="1.0"?>
<package format="2">
  <name>fkie_iop_manipulator_joint_position_sensor</name>
  <version>2.0.0</version>
  <description>Sensor for reporting the positions of the manipulator joints</description>

  <author>Alexander Tiderko</author>
  <maintainer email="alexander.tiderko@fkie.fraunhofer.de">Alexander Tiderko</maintainer>
  <license>GPLv2</license>
  <url type="website">https://github.com/fkie/iop_jaus_manipulator</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>fkie_iop_component</depend>
  <depend>fkie_iop_events</depend>
  <depend>fkie_iop_manipulator_specification_service</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

  <export>
    <fkie_iop_component plugin="${prefix}/plugin_iop.xml" />
  </export>
</package>
