<?xml version="1.0"?>
<package format="2">
  <name>fkie_iop_manipulator_specification_service</name>
  <version>2.0.0</version>
  <description>Handle the configuration for Manipulator by implementing Specification Service</description>

  <author>Alexander Tiderko</author>
  <maintainer email="alexander.tiderko@fkie.fraunhofer.de">Alexander Tiderko</maintainer>
  <license>GPLv2</license>
  <url type="website">https://github.com/fkie/iop_jaus_manipulator</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>boost</depend>
  <depend>eigen</depend>
  <depend>eigen_conversions</depend>
  <depend>fkie_iop_component</depend>
  <depend>fkie_iop_events</depend>
  <depend>moveit_core</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_ros_planning</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

  <export>
    <fkie_iop_component plugin="${prefix}/plugin_iop.xml" />
  </export>

</package>
