<?xml version="1.0"?>
<package format="2">
  <name>fkie_iop_primitive_endeffector</name>
  <version>1.0.0</version>
  <description>Control the end effector by velocity commands.</description>

  <author>Alexander Tiderko</author>
  <maintainer email="alexander.tiderko@fkie.fraunhofer.de">Alexander Tiderko</maintainer>
  <license>GPLv2</license>
  <url type="website">https://github.com/fkie/iop_jaus_manipulator</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>boost</depend>
  <depend>fkie_iop_component</depend>
  <depend>fkie_iop_management</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <fkie_iop_component plugin="${prefix}/plugin_iop.xml" />
  </export>
</package>
