<?xml version="1.0"?>
<package>
  <name>iop_manipulator_core_fkie</name>
  <version>1.0.0</version>
  <description>Reads the ROS urdf and creates the JAUS manipulator specification.
    </description>

  <maintainer email="alexander.tiderko@fkie.fraunhofer.de">Alexander Tiderko</maintainer>
  <license>GPLv2</license>
  <url type="website">https://github.com/fkie/iop_jaus_manipulator.git</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>boost</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>iop_builder_fkie</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>boost</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>iop_builder_fkie</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>