<?xml version="1.0"?>
<package format="2">
  <name>iop_manipulator_joint_position_sensor_fkie</name>
  <version>2.0.0</version>
  <description>Sensor for reporting the positions of the manipulator joints</description>

  <author>Alexander Tiderko</author>
  <maintainer email="alexander.tiderko@fkie.fraunhofer.de">Alexander Tiderko</maintainer>
  <license>GPLv2</license>
  <url type="website">https://github.com/fkie/iop_jaus_manipulator</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>iop_component_fkie</depend>
  <depend>iop_events_fkie</depend>
  <depend>iop_manipulator_specification_service_fkie</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

  <export>
    <iop_component_fkie plugin="${prefix}/plugin_iop.xml" />
  </export>
</package>
