<?xml version="1.0"?>
<package format="2">
  <name>iop_pantilt_joint_position_driver_fkie</name>
  <version>2.1.0</version>
  <description>Services for Pantilt Joint Position Driver and Sensor</description>

  <author>Alexander Tiderko</author>
  <maintainer email="alexander.tiderko@fkie.fraunhofer.de">Alexander Tiderko</maintainer>
  <license>GPLv2</license>
  <url type="website">https://github.com/fkie/iop_jaus_manipulator</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>boost</depend>
  <depend>iop_component_fkie</depend>
  <depend>iop_management_fkie</depend>
  <depend>iop_pantilt_specification_service_fkie</depend>
  <depend>moveit_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <iop_component_fkie plugin="${prefix}/plugin_iop.xml" />
  </export>

</package>
