<?xml version="1.0"?>
<package format="2">
  <name>iop_primitive_manipulator_fkie</name>
  <version>2.0.0</version>
  <description>Control the manipulator by velocity commands.</description>

  <author>Alexander Tiderko</author>
  <maintainer email="alexander.tiderko@fkie.fraunhofer.de">Alexander Tiderko</maintainer>
  <license>GPLv2</license>
  <url type="website">https://github.com/fkie/iop_jaus_manipulator</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>boost</depend>
  <depend>iop_component_fkie</depend>
  <depend>iop_management_fkie</depend>
  <depend>iop_manipulator_specification_service_fkie</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <iop_component_fkie plugin="${prefix}/plugin_iop.xml" />
  </export>
</package>
